0.2.2

0.2.1

2016-05-05  Brecht Sanders  https://github.com/brechtsanders/

  * added CMake BUILD_DOCUMENTATION option (defaults to ON if Doxygen is detected)
  * workaround for missing stdint.h/unistd.h on Visual C 
  * removed -pthread when building for Apple
  * released Windows binaries (32-bit and 64-bit)

0.2.0

2016-04-28  Brecht Sanders  https://github.com/brechtsanders/

  * added CMake support and tested on multiple platforms:
      + Windows 10 with MinGW compiler using MSYS shell
      + Debian Linux 8.4
      + OS X 10.11.3

2016-04-25  Brecht Sanders  https://github.com/brechtsanders/

  * added lastModifiedBy property (set to "libxlsxio_write <version>")

2016-04-16  Brecht Sanders  https://github.com/brechtsanders/

  * example C++ classes: XLSXIOWriter, XLSXIOReader, XLSXIOReaderSheet

2016-04-11  Brecht Sanders  https://github.com/brechtsanders/

  * added more comments in example files
  * renamed the following for better naming consistency:
      + XLSXIO_READ_NAME to XLSXIOREAD_NAME
      + XLSXIO_READ_FULLNAME to XLSXIOREAD_FULLNAME
      + XLSXIO_WRITE_NAME to XLSXIOWRITE_NAME
      + XLSXIO_WRITE_FULLNAME to XLSXIOWRITE_FULLNAME
  * added support to xlsxio_csv2xlsx to use - as standard input

0.1.9

2016-04-10  Brecht Sanders  https://github.com/brechtsanders/

  * added xlsxio_csv2xlsx command line utility
  * fixed warning in xlsxio_xlsx2csv when compiling with clang

0.1.8

2016-04-07  Brecht Sanders  https://github.com/brechtsanders/

  * fixed issue with callback data pointer in row callback function
  * added xlsxio_xlsx2csv command line utility

0.1.7

2016-03-28  Brecht Sanders  https://github.com/brechtsanders/

  * changed integer type to int64_t in xlsxiowrite_add_cell_int() and xlsxioread_sheet_next_cell_int()

0.1.6

2016-03-24  Brecht Sanders  https://github.com/brechtsanders/

  * delete destination file before writing to it
  * fixed corruption issue when closing if no rows were written

0.1.5
