@@ -149,6 +149,8 @@ int main (int argc, char* argv[])
             param = argv[i] + 2;
           else if (i + 1 < argc && argv[i + 1])
             param = argv[++i];
+          else
+            param = NULL;
           if (param)
             sheetdata.separator = param[0];
           continue;
